[Refactor] Pay, Reserv controller 리팩토링
1. 주석 추가
2. 중복코드 방지, 가독성 위한 private 메서드 추가 및 수정
3. reserv() 내부 비즈니스 로직 수정
4. security-context.xml id 오탈자 수정
5. reserv.jsp, reservView.jsp 알림을 위한 javascript의 alert추가
6. reservServiceImplTest 추가